<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FoodIST</string>
    <string name="key">5b3ce3597851110001cf6248fb8cf9c19bae4bf08f17f4d3454d90ff</string>
    <string name="foodListButton">See food list</string>
    <string name="title_activity_map_test">Map</string>
    <string name="service_name">Name</string>
    <string name="opening_hour">Opening</string>
    <string name="is_open">Status</string>
    <string name="distance">1675 mins</string>
    <string name="time">01:00</string>
    <string name="service_photo">Service Photo</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="new_dish">Add a new dish</string>
    <string name="dish_name">Dish name</string>
    <string name="select_category">Dish category:</string>
    <string name="select_user">User type:</string>
    <string name="dish_price">Dish price</string>
    <string name="fish_category">Fish</string>
    <string name="meat_category">Meat</string>
    <string name="vegetarian_category">Vegetarian</string>
    <string name="vegan_category">Vegan</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="port">10001</string>
    <string name="take_picture">Take Picture</string>
    <string name="import_picture">Import Picture</string>
    <string name="submit_photo">Submit photo</string>
    <string name="done">Done</string>
    <string name="details">Details</string>
    <string name="dietary_constraints">Dietary Constraints</string>
    <string name="Closed">Closed</string>
    <string name="Open">Open</string>
    <string name="Interval">Interval</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_name">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_istNumber">ist1xxxxx</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_log_in">Log in</string>
    <string name="action_log_out">Log out</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="action_create_account">Create New Account</string>
    <string name="action_continue_as_guest">Continue as Guest</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="student_user">Student</string>
    <string name="professor_user">Professor</string>
    <string name="researcher_user">Researcher</string>
    <string name="staff_user">Staff</string>
</resources>
